@@ -1,4 +1,4 @@
-/* $OpenBSD: ssh-agent.c,v 1.148 2006/07/26 02:35:17 stevesk Exp $ */
+/* $OpenBSD: ssh-agent.c,v 1.149 2006/07/26 13:57:17 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -58,6 +58,7 @@
 # include <paths.h>
 #endif
 #include <signal.h>
+#include <stdlib.h>
 #include <time.h>
 #include <string.h>
 #include <unistd.h>
